--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -1,4 +1,3 @@
-// -*- mode: jsonc -*-
 {
   "margin-left": 5,
   "margin-right": 5,
@@ -129,7 +128,7 @@
       "default": "󰁹",
       "performance": "󰓅",
       "balanced": "󰾅",
-      "power-saver": "󰌪"
+      "power-saver": "󰾆"
     }
   },
   "backlight": {
