--- a/home/.config/espanso/config/default.yml
+++ b/home/.config/espanso/config/default.yml
@@ -1,3 +1,4 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/espanso/espanso/dev/schemas/config.schema.json
 undo_backspace: true
+keyboard_layout: {layout: us, options: "ctrl:nocaps,altwin:menu_win"}
