--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -52,6 +52,14 @@ set -a terminal-features 'foot:RGB'
 set -a terminal-features '*256color:RGB'
 set -g allow-passthrough on
 
+# fix direnv
+# https://github.com/direnv/direnv/wiki/Tmux
+set-option -g update-environment "DIRENV_DIFF DIRENV_DIR DIRENV_WATCHES"
+set-environment -gu DIRENV_DIFF
+set-environment -gu DIRENV_DIR
+set-environment -gu DIRENV_WATCHES
+set-environment -gu DIRENV_LAYOUT
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
