fix(whichkey): command

--- a/home/.config/wlr-which-key/config.yaml
+++ b/home/.config/wlr-which-key/config.yaml
@@ -57,8 +57,8 @@ menu:
         desc: Yazi
         cmd: foot -e yazi
       - key: n
-        desc: nautalus
-        cmd: nautalus
+        desc: Nautilus
+        cmd: nautilus
 
   - key: g
     desc: Gaming
