feat(whichkey): lazydocker

--- a/home/.config/wlr-which-key/config.yaml
+++ b/home/.config/wlr-which-key/config.yaml
@@ -59,6 +59,9 @@ menu:
       - key: c
         desc: Cursor
         cmd: code-cursor
+      - key: d
+        desc: LazyDocker
+        cmd: lazydocker
       - key: n
         desc: NeoVim
         cmd: foot -e nvim
