--- a/home/.config/wlr-which-key/config.yaml
+++ b/home/.config/wlr-which-key/config.yaml
@@ -1,14 +1,14 @@
 ---
 # Theming
-font: Inter Display 18
-background: "#faf4edd0"
+font: Inter Display 24
+background: "#faf4edf0"
 color: "#575279"
 border: "#907aa9"
 separator: " ➜ "
 border_width: 4
 corner_r: 12
 padding: 15 # Defaults to corner_r
-# rows_per_column: 5 # No limit by default
+rows_per_column: 8 # No limit by default
 column_padding: 25 # Defaults to padding
 
 anchor: center
@@ -24,7 +24,7 @@ menu:
     desc: 1Password
     cmd: 1password --quick-access
   - key: e
-    desc: email
+    desc: Email
     cmd: thunderbird
 
   - key: b
@@ -69,25 +69,25 @@ menu:
   - key: f
     desc: File Manager
     submenu:
-      - key: y
-        desc: Yazi
-        cmd: foot -e yazi
       - key: n
         desc: Nautilus
         cmd: nautilus
+      - key: y
+        desc: Yazi
+        cmd: foot -e yazi
 
   - key: g
     desc: Gaming
     submenu:
-      - key: S
-        desc: Steam
-        cmd: steam
       - key: l
         desc: Lutris
         cmd: lutris
       - key: r
         desc: RetroArch
         cmd: retroarch
+      - key: S
+        desc: Steam
+        cmd: steam
 
   - key: m
     desc: Media
@@ -161,40 +161,40 @@ menu:
   - key: r
     desc: Recording
     submenu:
-      - key: r
-        desc: Record Screen
-        cmd: ~/bin/record-screen
-      - key: s
-        desc: Screenshot
-        cmd: ~/bin/screenshot
       - key: f
         desc: Clip Firefox Audio
         cmd: ~/bin/clip_firefox
       - key: m
         desc: Clip mpv Audio
         cmd: ~/bin/clip_mpv
+      - key: r
+        desc: Record Screen
+        cmd: ~/bin/record-screen
+      - key: s
+        desc: Screenshot
+        cmd: ~/bin/screenshot
 
   - key: s
     desc: Streaming
     submenu:
-      - key: s
-        desc: Start Streaming
-        cmd: foot -e ~/bin/streaming_time
-      - key: o
-        desc: OBS
-        cmd: obs
-      - key: f
-        desc: Firebot
-        cmd: firebot
       - key: c
         desc: StreamController
         cmd: streamcontroller
-      - key: v
-        desc: Veadotube Mini
-        cmd: veadotube-mini
+      - key: f
+        desc: Firebot
+        cmd: firebot
+      - key: o
+        desc: OBS
+        cmd: obs
+      - key: s
+        desc: Start Streaming
+        cmd: foot -e ~/bin/streaming_time
       - key: t
         desc: Twitch
         cmd: twitch-chromium
+      - key: v
+        desc: Veadotube Mini
+        cmd: veadotube-mini
 
   - key: t
     desc: Tools
