fix(whichkey): steam key

--- a/home/.config/wlr-which-key/config.yaml
+++ b/home/.config/wlr-which-key/config.yaml
@@ -85,7 +85,7 @@ menu:
       - key: r
         desc: RetroArch
         cmd: retroarch
-      - key: S
+      - key: s
         desc: Steam
         cmd: steam
 
