style(fuzzel): clear up sizes

--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -1,13 +1,12 @@
 font=Inter Display:size=24
 use-bold=true
-width=21
 
 match-mode=fuzzy
 
 icons-enabled=yes
 icon-theme=rose-pine
 
-terminal=foot
+terminal=foot -e
 
 # RosePine Dawn
 [colors]
