fix(whichkey): fix cursor launch
shows how much I use this

--- a/home/.config/wlr-which-key/config.yaml
+++ b/home/.config/wlr-which-key/config.yaml
@@ -508,7 +508,7 @@ menu:
         cmd: brave
       - key: c
         desc: Cursor
-        cmd: code-cursor
+        cmd: cursor
       - key: d
         desc: LazyDocker
         cmd: lazydocker
