feat: back on fuzzel, with mousedisable

--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -1,12 +1,11 @@
 font=Inter Display:size=24
 use-bold=true
 
-match-mode=fuzzy
-
 icons-enabled=yes
 icon-theme=rose-pine
 
 terminal=foot -e
+enable-mouse=false
 
 # RosePine Dawn
 [colors]
