fix(fuzzel): fancy laumch terminal

--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -4,7 +4,7 @@ use-bold=true
 icons-enabled=yes
 icon-theme=rose-pine
 
-terminal=foot -e
+terminal=foot -a '{cmd}' -T '{cmd}' {cmd}
 enable-mouse=false
 
 # RosePine Dawn
